Implemented dynamic DatabaseManager.java; removed unneeded String formatting on Logger calls
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>